--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,6 +171,7 @@ h5 {
     opacity: 0.9;   /* průhlednost */ 
     border-right: 1px solid black;
     color: white;
+    box-shadow: 3px 0px 20px 0px black;
 }
 
 .sidenav h2 {
@@ -188,7 +189,8 @@ h5 {
     display: flex;
     flex-direction: column;
     flex: 70%;
-    margin-bottom: 15px;
+    box-shadow: inset 0px 0px 20px #5c5c5c;
+    padding: 20px 0;
 }
 
 .tlacitka {
